# llmada

./: 404.html  README.md  index.html  main.py  mkdocs.yml  my_llm_prompt.md  objects.inv  pyproject.toml  report.html  run_test.sh  setup.py
api_document/: index.html
client/: index.html
core/: index.html
docs/: api_document.md  client.md  use_case.md
llmada/: __init__.py  client.py  core copy.py  core.py  server.py
llmada/models/: factory.py  types.py
search/: search_index.json
src/llmada/: __init__.py  asr_tts_wws.py  client.py  core.py  log.py  utils.py
src/llmada/protocols/: protocols.py
test/: aatestaa.py  test.py  test2.py  test_client.py  test_co.py  test_core.py  test_ww.py
tests/: llmada.ipynb  test_1.py  test_client.py  test_core.py  test_func2.py  test_function.py  test_mcp.py
tests/protocols/: __init__.py
use_case/: index.html
