[project]
name = "llmada"
version = "1.0.7"
description = "提升了系统"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [ "cryptography>=45.0.4", "google-genai>=1.13.0", "llama-index==0.12.30", "openai>=1.70.0", "python-dotenv>=1.1.0", "sse-starlette>=2.3.3", "httpx[http2]>=0.28.1", "fastapi>=0.115.12", "volcengine-python-sdk[ark]>=1.1.3", "toml==0.10.2", "pytest>=8.4.2", "anyio>=4.9.0", "pytest-tornasync>=0.6.0.post2", "pytest-asyncio>=1.2.0", "uvicorn>=0.35.0",]

[tool.pytest.ini_options]
testpaths = [ "tests",]
pythonpath = [ "src",]
markers = [ "base: base function", "function: 功能性方法测试", "expensive_api: marks tests that call actual external APIs and might incur cost", "network: marks tests that require network connectivity (but might not be expensive API calls)", "slow: marks tests that take a long time to run", "integration: marks integration tests", "unit: marks unit tests (though often not needed, as unit tests are default and fast)",]
